fixed overflow issue

--- a/scss/abstracts/_base.scss
+++ b/scss/abstracts/_base.scss
@@ -25,6 +25,7 @@ html {
 
 body {
   font-family: "Bai Jamjuree", sans-serif;
+  overflow-x: hidden;
 }
 
 a {
