--- a/scss/layout/_features.scss
+++ b/scss/layout/_features.scss
@@ -13,6 +13,7 @@
 
     @include responsive(md) {
       grid-template-columns: 1fr;
+      padding: 5rem 2rem;
     }
   }
 
